--- a/index.html
+++ b/index.html
@@ -12,31 +12,76 @@
     <h1>Image gallery responsive using grid</h1>
     <div class="gallery_container">
       <div class="gallery_item">
-        <img src="img/1.jpg" alt="" class="gallery_img" />
+        <img src="gallery/1.jpg" alt="" class="gallery_img" />
       </div>
       <div class="gallery_item">
-        <img src="img/2.jpg" alt="" class="gallery_img" />
+        <img src="gallery/2.jpg" alt="" class="gallery_img" />
       </div>
       <div class="gallery_item">
-        <img src="img/3.jpg" alt="" class="gallery_img" />
+        <img src="gallery/3.jpg" alt="" class="gallery_img" />
       </div>
       <div class="gallery_item">
-        <img src="img/4.jpg" alt="" class="gallery_img" />
+        <img src="gallery/4.jpg" alt="" class="gallery_img" />
       </div>
       <div class="gallery_item">
-        <img src="img/5.jpg" alt="" class="gallery_img" />
+        <img src="gallery/5.jpg" alt="" class="gallery_img" />
       </div>
       <div class="gallery_item">
-        <img src="img/6.jpg" alt="" class="gallery_img" />
+        <img src="gallery/6.jpg" alt="" class="gallery_img" />
       </div>
       <div class="gallery_item">
-        <img src="img/7.jpg" alt="" class="gallery_img" />
+        <img src="gallery/7.jpg" alt="" class="gallery_img" />
       </div>
       <div class="gallery_item">
-        <img src="img/8.jpg" alt="" class="gallery_img" />
+        <img src="gallery/8.jpg" alt="" class="gallery_img" />
       </div>
       <div class="gallery_item">
-        <img src="img/9.jpg" alt="" class="gallery_img" />
+        <img src="gallery/9.jpg" alt="" class="gallery_img" />
+      </div>
+      <div class="gallery_item">
+        <img src="gallery/10.jpg" alt="" class="gallery_img" />
+      </div>
+      <div class="gallery_item">
+        <img src="gallery/11.jpg" alt="" class="gallery_img" />
+      </div>
+      <div class="gallery_item">
+        <img src="gallery/12.jpg" alt="" class="gallery_img" />
+      </div>
+      <div class="gallery_item">
+        <img src="gallery/13.jpg" alt="" class="gallery_img" />
+      </div>
+      <div class="gallery_item">
+        <img src="gallery/14.jpg" alt="" class="gallery_img" />
+      </div>
+      <div class="gallery_item">
+        <img src="gallery/15.jpg" alt="" class="gallery_img" />
+      </div>
+      <div class="gallery_item">
+        <img src="gallery/16.jpg" alt="" class="gallery_img" />
+      </div>
+      <div class="gallery_item">
+        <img src="gallery/17.jpg" alt="" class="gallery_img" />
+      </div>
+      <div class="gallery_item">
+        <img src="gallery/18.jpg" alt="" class="gallery_img" />
+      </div>
+      <div class="gallery_item">
+        <img src="gallery/19.jpg" alt="" class="gallery_img" />
+      </div>
+      <div class="gallery_item">
+        <img src="gallery/20.jpg" alt="" class="gallery_img" />
+      </div>
+      <div class="gallery_item">
+        <img src="gallery/21.jpg" alt="" class="gallery_img" />
+      </div>
+      <div class="gallery_item">
+        <img src="gallery/22.jpg" alt="" class="gallery_img" />
+      </div>
+      <div class="gallery_item">
+        <img src="gallery/23.jpg" alt="" class="gallery_img" />
+      </div>
+      <div class="gallery_item">
+        <img src="gallery/24.jpg" alt="" class="gallery_img" />
       </div>
     </div>
   </body>
