--- a/index.html
+++ b/index.html
@@ -85,4 +85,8 @@
       </div>
     </div>
   </body>
+
+  <footer>
+    <small> Fuente imágenes: Unsplash.com créditos a quien corresponda</small>
+  </footer>
 </html>
