fixed_updated_ReUploadfiles

--- a/index.html
+++ b/index.html
@@ -83,6 +83,24 @@
       <div class="gallery_item">
         <img src="gallery/24.jpg" alt="" class="gallery_img" />
       </div>
+      <div class="gallery_item">
+        <img src="gallery/25.jpg" alt="" class="gallery_img" />
+      </div>
+      <div class="gallery_item">
+        <img src="gallery/26.jpg" alt="" class="gallery_img" />
+      </div>
+      <div class="gallery_item">
+        <img src="gallery/27.jpg" alt="" class="gallery_img" />
+      </div>
+      <div class="gallery_item">
+        <img src="gallery/28.jpg" alt="" class="gallery_img" />
+      </div>
+      <div class="gallery_item">
+        <img src="gallery/29.jpg" alt="" class="gallery_img" />
+      </div>
+      <div class="gallery_item">
+        <img src="gallery/30.jpg" alt="" class="gallery_img" />
+      </div>
     </div>
   </body>
 
