--- a/index.html
+++ b/index.html
@@ -10,96 +10,128 @@
   </head>
   <body>
     <h1>Image gallery responsive using grid</h1>
-    <div class="gallery_container">
-      <div class="gallery_item">
-        <img src="gallery/1.jpg" alt="" class="gallery_img" />
-      </div>
-      <div class="gallery_item">
-        <img src="gallery/2.jpg" alt="" class="gallery_img" />
-      </div>
-      <div class="gallery_item">
-        <img src="gallery/3.jpg" alt="" class="gallery_img" />
-      </div>
-      <div class="gallery_item">
-        <img src="gallery/4.jpg" alt="" class="gallery_img" />
-      </div>
-      <div class="gallery_item">
-        <img src="gallery/5.jpg" alt="" class="gallery_img" />
-      </div>
-      <div class="gallery_item">
-        <img src="gallery/6.jpg" alt="" class="gallery_img" />
-      </div>
-      <div class="gallery_item">
-        <img src="gallery/7.jpg" alt="" class="gallery_img" />
-      </div>
-      <div class="gallery_item">
-        <img src="gallery/8.jpg" alt="" class="gallery_img" />
-      </div>
-      <div class="gallery_item">
-        <img src="gallery/9.jpg" alt="" class="gallery_img" />
-      </div>
-      <div class="gallery_item">
-        <img src="gallery/10.jpg" alt="" class="gallery_img" />
-      </div>
-      <div class="gallery_item">
-        <img src="gallery/11.jpg" alt="" class="gallery_img" />
-      </div>
-      <div class="gallery_item">
-        <img src="gallery/12.jpg" alt="" class="gallery_img" />
-      </div>
-      <div class="gallery_item">
-        <img src="gallery/13.jpg" alt="" class="gallery_img" />
-      </div>
-      <div class="gallery_item">
-        <img src="gallery/14.jpg" alt="" class="gallery_img" />
-      </div>
-      <div class="gallery_item">
-        <img src="gallery/15.jpg" alt="" class="gallery_img" />
-      </div>
-      <div class="gallery_item">
-        <img src="gallery/16.jpg" alt="" class="gallery_img" />
-      </div>
-      <div class="gallery_item">
-        <img src="gallery/17.jpg" alt="" class="gallery_img" />
-      </div>
-      <div class="gallery_item">
-        <img src="gallery/18.jpg" alt="" class="gallery_img" />
-      </div>
-      <div class="gallery_item">
-        <img src="gallery/19.jpg" alt="" class="gallery_img" />
-      </div>
-      <div class="gallery_item">
-        <img src="gallery/20.jpg" alt="" class="gallery_img" />
-      </div>
-      <div class="gallery_item">
-        <img src="gallery/21.jpg" alt="" class="gallery_img" />
-      </div>
-      <div class="gallery_item">
-        <img src="gallery/22.jpg" alt="" class="gallery_img" />
-      </div>
-      <div class="gallery_item">
-        <img src="gallery/23.jpg" alt="" class="gallery_img" />
-      </div>
-      <div class="gallery_item">
-        <img src="gallery/24.jpg" alt="" class="gallery_img" />
-      </div>
-      <div class="gallery_item">
-        <img src="gallery/25.jpg" alt="" class="gallery_img" />
-      </div>
-      <div class="gallery_item">
-        <img src="gallery/26.jpg" alt="" class="gallery_img" />
-      </div>
-      <div class="gallery_item">
-        <img src="gallery/27.jpg" alt="" class="gallery_img" />
-      </div>
-      <div class="gallery_item">
-        <img src="gallery/28.jpg" alt="" class="gallery_img" />
-      </div>
-      <div class="gallery_item">
-        <img src="gallery/29.jpg" alt="" class="gallery_img" />
-      </div>
-      <div class="gallery_item">
-        <img src="gallery/30.jpg" alt="" class="gallery_img" />
+    <div class="container_index">
+      <div class="gallery_container">
+        <div class="gallery_item">
+          <img src="gallery/1.jpg" alt="" class="gallery_img" />
+          <p class="title_img">by Cezar Sampaio</p>
+        </div>
+        <div class="gallery_item">
+          <img src="gallery/2.jpg" alt="" class="gallery_img" />
+          <p class="title_img">by Eberhard Gross</p>
+        </div>
+        <div class="gallery_item">
+          <img src="gallery/3.jpg" alt="" class="gallery_img" />
+          <p class="title_img">by Adam Bignell</p>
+        </div>
+        <div class="gallery_item">
+          <img src="gallery/4.jpg" alt="" class="gallery_img" />
+          <p class="title_img">by Tamara Menzi</p>
+        </div>
+        <div class="gallery_item">
+          <img src="gallery/5.jpg" alt="" class="gallery_img" />
+          <p class="title_img">by Alan Scales</p>
+        </div>
+        <div class="gallery_item">
+          <img src="gallery/6.jpg" alt="" class="gallery_img" />
+          <p class="title_img">by Europeana</p>
+        </div>
+        <div class="gallery_item">
+          <img src="gallery/7.jpg" alt="" class="gallery_img" />
+          <p class="title_img">by Marcos Paulo Prado</p>
+        </div>
+        <div class="gallery_item">
+          <img src="gallery/8.jpg" alt="" class="gallery_img" />
+          <p class="title_img">by McGill Library</p>
+        </div>
+        <div class="gallery_item">
+          <img src="gallery/9.jpg" alt="" class="gallery_img" />
+          <p class="title_img">by Elliot Gouy</p>
+        </div>
+        <div class="gallery_item">
+          <img src="gallery/10.jpg" alt="" class="gallery_img" />
+          <p class="title_img">by Steve Johnson</p>
+        </div>
+        <div class="gallery_item">
+          <img src="gallery/11.jpg" alt="" class="gallery_img" />
+          <p class="title_img">by Neom</p>
+        </div>
+        <div class="gallery_item">
+          <img src="gallery/12.jpg" alt="" class="gallery_img" />
+          <p class="title_img">by Neom</p>
+        </div>
+        <div class="gallery_item">
+          <img src="gallery/13.jpg" alt="" class="gallery_img" />
+          <p class="title_img">by Nick Andreka</p>
+        </div>
+        <div class="gallery_item">
+          <img src="gallery/14.jpg" alt="" class="gallery_img" />
+          <p class="title_img">by Europeana</p>
+        </div>
+        <div class="gallery_item">
+          <img src="gallery/15.jpg" alt="" class="gallery_img" />
+          <p class="title_img">by Europeana</p>
+        </div>
+        <div class="gallery_item">
+          <img src="gallery/16.jpg" alt="" class="gallery_img" />
+          <p class="title_img">by Peter Chen</p>
+        </div>
+        <div class="gallery_item">
+          <img src="gallery/17.jpg" alt="" class="gallery_img" />
+          <p class="title_img">by Neom</p>
+        </div>
+        <div class="gallery_item">
+          <img src="gallery/18.jpg" alt="" class="gallery_img" />
+          <p class="title_img">by Leo Manjarrez</p>
+        </div>
+        <div class="gallery_item">
+          <img src="gallery/19.jpg" alt="" class="gallery_img" />
+          <p class="title_img">by Enq-1998</p>
+        </div>
+        <div class="gallery_item">
+          <img src="gallery/20.jpg" alt="" class="gallery_img" />
+          <p class="title_img">by Alex Lvrs</p>
+        </div>
+        <div class="gallery_item">
+          <img src="gallery/21.jpg" alt="" class="gallery_img" />
+          <p class="title_img">by No-Revisions</p>
+        </div>
+        <div class="gallery_item">
+          <img src="gallery/22.jpg" alt="" class="gallery_img" />
+          <p class="title_img">by Neom</p>
+        </div>
+        <div class="gallery_item">
+          <img src="gallery/23.jpg" alt="" class="gallery_img" />
+          <p class="title_img">by Neom</p>
+        </div>
+        <div class="gallery_item">
+          <img src="gallery/24.jpg" alt="" class="gallery_img" />
+          <p class="title_img">by Matt Le</p>
+        </div>
+        <div class="gallery_item">
+          <img src="gallery/25.jpg" alt="" class="gallery_img" />
+          <p class="title_img">by Emily Seguin</p>
+        </div>
+        <div class="gallery_item">
+          <img src="gallery/26.jpg" alt="" class="gallery_img" />
+          <p class="title_img">by Francesco Unga</p>
+        </div>
+        <div class="gallery_item">
+          <img src="gallery/27.jpg" alt="" class="gallery_img" />
+          <p class="title_img">by Joseph Daniel</p>
+        </div>
+        <div class="gallery_item">
+          <img src="gallery/28.jpg" alt="" class="gallery_img" />
+          <p class="title_img">by Kshithij Chandrashekar</p>
+        </div>
+        <div class="gallery_item">
+          <img src="gallery/29.jpg" alt="" class="gallery_img" />
+          <p class="title_img">by Luka Verc</p>
+        </div>
+        <div class="gallery_item">
+          <img src="gallery/30.jpg" alt="" class="gallery_img" />
+          <p class="title_img">by Wolfgang Hasselmann</p>
+        </div>
       </div>
     </div>
   </body>
