--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Responsive Gallery with Grid" />
 
     <link rel="stylesheet" href="styles.css" />
 
@@ -13,123 +14,273 @@
     <div class="container_index">
       <div class="gallery_container">
         <div class="gallery_item">
-          <img src="gallery/1.jpg" alt="" class="gallery_img" loading="lazy" />
+          <img
+            src="gallery/1.jpg"
+            alt="image1_byCezarSampaio"
+            class="gallery_img"
+            loading="lazy"
+          />
           <p class="title_img">by Cezar Sampaio</p>
         </div>
         <div class="gallery_item">
-          <img src="gallery/2.jpg" alt="" class="gallery_img" loading="lazy" />
+          <img
+            src="gallery/2.jpg"
+            alt="image2_byEberhardGross"
+            class="gallery_img"
+            loading="lazy"
+          />
           <p class="title_img">by Eberhard Gross</p>
         </div>
         <div class="gallery_item">
-          <img src="gallery/3.jpg" alt="" class="gallery_img" loading="lazy" />
+          <img
+            src="gallery/3.jpg"
+            alt="image3_byAdamBignell"
+            class="gallery_img"
+            loading="lazy"
+          />
           <p class="title_img">by Adam Bignell</p>
         </div>
         <div class="gallery_item">
-          <img src="gallery/4.jpg" alt="" class="gallery_img" loading="lazy" />
+          <img
+            src="gallery/4.jpg"
+            alt="image4_byTamaraMenzi"
+            class="gallery_img"
+            loading="lazy"
+          />
           <p class="title_img">by Tamara Menzi</p>
         </div>
         <div class="gallery_item">
-          <img src="gallery/5.jpg" alt="" class="gallery_img" loading="lazy" />
+          <img
+            src="gallery/5.jpg"
+            alt="image5_byAlanScales"
+            class="gallery_img"
+            loading="lazy"
+          />
           <p class="title_img">by Alan Scales</p>
         </div>
         <div class="gallery_item">
-          <img src="gallery/6.jpg" alt="" class="gallery_img" loading="lazy" />
+          <img
+            src="gallery/6.jpg"
+            alt="image6_byEuropeana"
+            class="gallery_img"
+            loading="lazy"
+          />
           <p class="title_img">by Europeana</p>
         </div>
         <div class="gallery_item">
-          <img src="gallery/7.jpg" alt="" class="gallery_img" loading="lazy" />
+          <img
+            src="gallery/7.jpg"
+            alt="image7_byMarcosPauloPrado"
+            class="gallery_img"
+            loading="lazy"
+          />
           <p class="title_img">by Marcos Paulo Prado</p>
         </div>
         <div class="gallery_item">
-          <img src="gallery/8.jpg" alt="" class="gallery_img" loading="lazy" />
+          <img
+            src="gallery/8.jpg"
+            alt="image8_byMcgillLibrary"
+            class="gallery_img"
+            loading="lazy"
+          />
           <p class="title_img">by McGill Library</p>
         </div>
         <div class="gallery_item">
-          <img src="gallery/9.jpg" alt="" class="gallery_img" loading="lazy" />
+          <img
+            src="gallery/9.jpg"
+            alt="image9_ElliotGuoy"
+            class="gallery_img"
+            loading="lazy"
+          />
           <p class="title_img">by Elliot Gouy</p>
         </div>
         <div class="gallery_item">
-          <img src="gallery/10.jpg" alt="" class="gallery_img" loading="lazy" />
+          <img
+            src="gallery/10.jpg"
+            alt="image10_bySteveJohnson"
+            class="gallery_img"
+            loading="lazy"
+          />
           <p class="title_img">by Steve Johnson</p>
         </div>
         <div class="gallery_item">
-          <img src="gallery/11.jpg" alt="" class="gallery_img" loading="lazy" />
+          <img
+            src="gallery/11.jpg"
+            alt="image11_byNeom"
+            class="gallery_img"
+            loading="lazy"
+          />
           <p class="title_img">by Neom</p>
         </div>
         <div class="gallery_item">
-          <img src="gallery/12.jpg" alt="" class="gallery_img" loading="lazy" />
+          <img
+            src="gallery/12.jpg"
+            alt="image12_byNeom"
+            class="gallery_img"
+            loading="lazy"
+          />
           <p class="title_img">by Neom</p>
         </div>
         <div class="gallery_item">
-          <img src="gallery/13.jpg" alt="" class="gallery_img" loading="lazy" />
+          <img
+            src="gallery/13.jpg"
+            alt="image13_byNickAndreka"
+            class="gallery_img"
+            loading="lazy"
+          />
           <p class="title_img">by Nick Andreka</p>
         </div>
         <div class="gallery_item">
-          <img src="gallery/14.jpg" alt="" class="gallery_img" loading="lazy" />
+          <img
+            src="gallery/14.jpg"
+            alt="image14_byEuropeana"
+            class="gallery_img"
+            loading="lazy"
+          />
           <p class="title_img">by Europeana</p>
         </div>
         <div class="gallery_item">
-          <img src="gallery/15.jpg" alt="" class="gallery_img" loading="lazy" />
+          <img
+            src="gallery/15.jpg"
+            alt="image15_byEuropeana"
+            class="gallery_img"
+            loading="lazy"
+          />
           <p class="title_img">by Europeana</p>
         </div>
         <div class="gallery_item">
-          <img src="gallery/16.jpg" alt="" class="gallery_img" loading="lazy" />
+          <img
+            src="gallery/16.jpg"
+            alt="image16_byPeterChen"
+            class="gallery_img"
+            loading="lazy"
+          />
           <p class="title_img">by Peter Chen</p>
         </div>
         <div class="gallery_item">
-          <img src="gallery/17.jpg" alt="" class="gallery_img" loading="lazy" />
+          <img
+            src="gallery/17.jpg"
+            alt="image17_byNeom"
+            class="gallery_img"
+            loading="lazy"
+          />
           <p class="title_img">by Neom</p>
         </div>
         <div class="gallery_item">
-          <img src="gallery/18.jpg" alt="" class="gallery_img" loading="lazy" />
+          <img
+            src="gallery/18.jpg"
+            alt="image18_byLeoManjarrez"
+            class="gallery_img"
+            loading="lazy"
+          />
           <p class="title_img">by Leo Manjarrez</p>
         </div>
         <div class="gallery_item">
-          <img src="gallery/19.jpg" alt="" class="gallery_img" loading="lazy" />
+          <img
+            src="gallery/19.jpg"
+            alt="image19_byEnq-1998"
+            class="gallery_img"
+            loading="lazy"
+          />
           <p class="title_img">by Enq-1998</p>
         </div>
         <div class="gallery_item">
-          <img src="gallery/20.jpg" alt="" class="gallery_img" loading="lazy" />
+          <img
+            src="gallery/20.jpg"
+            alt="image20_byAlexLvrs"
+            class="gallery_img"
+            loading="lazy"
+          />
           <p class="title_img">by Alex Lvrs</p>
         </div>
         <div class="gallery_item">
-          <img src="gallery/21.jpg" alt="" class="gallery_img" loading="lazy" />
+          <img
+            src="gallery/21.jpg"
+            alt="image21_byNo-revisions"
+            class="gallery_img"
+            loading="lazy"
+          />
           <p class="title_img">by No-Revisions</p>
         </div>
         <div class="gallery_item">
-          <img src="gallery/22.jpg" alt="" class="gallery_img" loading="lazy" />
+          <img
+            src="gallery/22.jpg"
+            alt="image22_byNeom"
+            class="gallery_img"
+            loading="lazy"
+          />
           <p class="title_img">by Neom</p>
         </div>
         <div class="gallery_item">
-          <img src="gallery/23.jpg" alt="" class="gallery_img" loading="lazy" />
+          <img
+            src="gallery/23.jpg"
+            alt="image23_byNeom"
+            class="gallery_img"
+            loading="lazy"
+          />
           <p class="title_img">by Neom</p>
         </div>
         <div class="gallery_item">
-          <img src="gallery/24.jpg" alt="" class="gallery_img" loading="lazy" />
+          <img
+            src="gallery/24.jpg"
+            alt="image24_byMattLe"
+            class="gallery_img"
+            loading="lazy"
+          />
           <p class="title_img">by Matt Le</p>
         </div>
         <div class="gallery_item">
-          <img src="gallery/25.jpg" alt="" class="gallery_img" loading="lazy" />
+          <img
+            src="gallery/25.jpg"
+            alt="image25_byEmilySeguin"
+            class="gallery_img"
+            loading="lazy"
+          />
           <p class="title_img">by Emily Seguin</p>
         </div>
         <div class="gallery_item">
-          <img src="gallery/26.jpg" alt="" class="gallery_img" loading="lazy" />
+          <img
+            src="gallery/26.jpg"
+            alt="image26_byFrancescoUnga"
+            class="gallery_img"
+            loading="lazy"
+          />
           <p class="title_img">by Francesco Unga</p>
         </div>
         <div class="gallery_item">
-          <img src="gallery/27.jpg" alt="" class="gallery_img" loading="lazy" />
+          <img
+            src="gallery/27.jpg"
+            alt="image27_byJosephDaniel"
+            class="gallery_img"
+            loading="lazy"
+          />
           <p class="title_img">by Joseph Daniel</p>
         </div>
         <div class="gallery_item">
-          <img src="gallery/28.jpg" alt="" class="gallery_img" loading="lazy" />
+          <img
+            src="gallery/28.jpg"
+            alt="image28_byKshithijChandrashekar"
+            class="gallery_img"
+            loading="lazy"
+          />
           <p class="title_img">by Kshithij Chandrashekar</p>
         </div>
         <div class="gallery_item">
-          <img src="gallery/29.jpg" alt="" class="gallery_img" loading="lazy" />
+          <img
+            src="gallery/29.jpg"
+            alt="image29_byLukaVerc"
+            class="gallery_img"
+            loading="lazy"
+          />
           <p class="title_img">by Luka Verc</p>
         </div>
         <div class="gallery_item">
-          <img src="gallery/30.jpg" alt="" class="gallery_img" loading="lazy" />
+          <img
+            src="gallery/30.jpg"
+            alt="image30_byWolfgangHasselmann"
+            class="gallery_img"
+            loading="lazy"
+          />
           <p class="title_img">by Wolfgang Hasselmann</p>
         </div>
       </div>
